test_resources/lit_class/errors/test5.yr
class A {
    pub self () {}
    pub fn foo (self)
        throws AssertError
    {
        assert (false);
    }
}

fn main () {
    let a = copy A ();
    let z = &a.foo;

    z ();
}
